fix: error pay image

--- a/sproduct.html
+++ b/sproduct.html
@@ -282,11 +282,11 @@
         <h4>Install App</h4>
         <p>From App Store or Goolge Play</p>
         <div class="row">
-          <img src="/assets/images/pay/app.jpg" alt="" class="footer__pay" />
-          <img src="/assets/images/pay/play.jpg" alt="" class="footer__pay" />
+          <img src="./assets/images/pay/app.jpg" alt="" class="footer__pay" />
+          <img src="./assets/images/pay/play.jpg" alt="" class="footer__pay" />
         </div>
         <p>Secured Payment Gateways</p>
-        <img src="/assets/images/pay/pay.png" alt="" />
+        <img src="./assets/images/pay/pay.png" alt="" />
       </div>
 
       <div class="copyright">
