fix: error pay image

--- a/cart.html
+++ b/cart.html
@@ -156,7 +156,7 @@
 
     <footer class="section-p1">
       <div class="col">
-        <img src="assets/images/logo.png" alt="" />
+        <img src="./assets/images/logo.png" alt="" />
         <h4>Contact</h4>
         <p>
           <strong>Address:</strong> Phenikaa Universiy, Nguyen Trac, Ha Dong, Ha
@@ -219,6 +219,6 @@
       }
     </script>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
