--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     </section>
     <footer class="section-p1">
       <div class="col">
-        <img src="assets/images/logo.png" alt="">
+        <img src="./assets/images/logo.png" alt="">
         <h4>Contact</h4>
         <p><strong>Address:</strong> Phenikaa Universiy, Nguyen Trac, Ha Dong, Ha Noi</p>
         <p><strong>Phone:</strong> 0376416543</p>
@@ -524,6 +524,6 @@
     </script>
 
 
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
