--- a/sproduct.html
+++ b/sproduct.html
@@ -82,7 +82,7 @@
     <section id="prodetails" class="section-p1">
       <div class="single-pro-image">
         <img
-          src="/assets/images/products/f1.jpg"
+          src="./assets/images/products/f1.jpg"
           width="100%"
           id="MainImg"
           alt=""
@@ -90,7 +90,7 @@
         <div class="small-img-group">
           <div class="small-img-col">
             <img
-              src="/assets/images/products/f1.jpg"
+              src="./assets/images/products/f1.jpg"
               width="100%"
               class="small-img"
               alt=""
@@ -98,7 +98,7 @@
           </div>
           <div class="small-img-col">
             <img
-              src="/assets/images/products/f2.jpg"
+              src="./assets/images/products/f2.jpg"
               width="100%"
               class="small-img"
               alt=""
@@ -106,7 +106,7 @@
           </div>
           <div class="small-img-col">
             <img
-              src="/assets/images/products/f3.jpg"
+              src="./assets/images/products/f3.jpg"
               width="100%"
               class="small-img"
               alt=""
@@ -114,7 +114,7 @@
           </div>
           <div class="small-img-col">
             <img
-              src="/assets/images/products/f4.jpg"
+              src="./assets/images/products/f4.jpg"
               width="100%"
               class="small-img"
               alt=""
@@ -241,7 +241,7 @@
     </section>
     <footer class="section-p1">
       <div class="col">
-        <img src="assets/images/logo.png" alt="" />
+        <img src="./assets/images/logo.png" alt="" />
         <h4>Contact</h4>
         <p>
           <strong>Address:</strong> Phenikaa Universiy, Nguyen Trac, Ha Dong, Ha
@@ -315,6 +315,6 @@
       }
     </script>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
