--- a/cart.html
+++ b/cart.html
@@ -99,7 +99,7 @@
             <tbody>
                 <tr>
                     <td><a href=""><i class="fa-regular fa-circle-xmark"></i></a></td>
-                    <td><img src="/assets/images/products/f2.jpg" alt=""></td>
+                    <td><img src="./assets/images/products/f2.jpg" alt=""></td>
                     <td>Cartoon Astronaut T-shirt</td>
                     <td>$78.00</td>
                     <td><input type="number" value="1"></td>
@@ -108,7 +108,7 @@
 
                 <tr>
                     <td><a href=""><i class="fa-regular fa-circle-xmark"></i></a></td>
-                    <td><img src="/assets/images/products/f2.jpg" alt=""></td>
+                    <td><img src="./assets/images/products/f2.jpg" alt=""></td>
                     <td>Cartoon Astronaut T-shirt</td>
                     <td>$78.00</td>
                     <td><input type="number" value="1"></td>
@@ -117,7 +117,7 @@
 
                 <tr>
                     <td><a href=""><i class="fa-regular fa-circle-xmark"></i></a></td>
-                    <td><img src="/assets/images/products/f2.jpg" alt=""></td>
+                    <td><img src="./assets/images/products/f2.jpg" alt=""></td>
                     <td>Cartoon Astronaut T-shirt</td>
                     <td>$78.00</td>
                     <td><input type="number" value="1"></td>
